[0.1.37] update github.com/containers/image
Note that this includes fixes for
https://access.redhat.com/security/cve/CVE-2020-1702.

Signed-off-by: Valentin Rothberg <rothberg@redhat.com>

--- a/vendor.conf
+++ b/vendor.conf
@@ -2,7 +2,7 @@
 github.com/urfave/cli v1.20.0
 github.com/kr/pretty v0.1.0
 github.com/kr/text v0.1.0
-github.com/containers/image v2.0.0
+github.com/containers/image podman-1.4.2
 github.com/containers/buildah v1.8.4
 github.com/vbauerster/mpb v3.3.4
 github.com/mattn/go-isatty v0.0.4
